--- a/extension/manifest-firefox.json
+++ b/extension/manifest-firefox.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 2,
-  "name": "ChatGPT anywhere",
+  "name": "YTGPT",
   "version": "1.0.1",
   "permissions": [
     "storage",
@@ -9,11 +9,14 @@
   "content_scripts": [
     {
       "matches": [
-        "*://*/*"
+        "https://*.youtube.com/*"
       ],
       "js": [
         "openai.js",
         "content-script.js"
+      ],
+      "css": [
+        "content.css"
       ]
     }
   ],
